*** empty log message ***

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -12,7 +12,7 @@ MOC=@MOC@
 AR=@AR@
 RANLIB=@RANLIB@
 
-CPPFLAGS=@CPPFLAGS@ @DEFS@
+CPPFLAGS=-I.. @CPPFLAGS@ @DEFS@
 CFLAGS=@ac_CC_WARN@ @ac_DEBUG@
 
 ##############################################
@@ -20,9 +20,9 @@ CFLAGS=@ac_CC_WARN@ @ac_DEBUG@
 PKINAMES=func asn1int asn1time x509name x509rev x509v3ext pass_info \
 	pki_key pki_x509super pki_x509req pki_x509 \
 	pki_pkcs12 pki_temp pki_crl pki_pkcs7 \
-	db_base
+	db_base 
 
-MOCNAMES=pki_base db_key db_x509super db_x509req db_x509 db_temp db_crl
+MOCNAMES=pki_base db_key db_x509super db_x509req db_x509 db_temp db_crl load_obj
 
 PKIOBJS=$(patsubst %, %.o, $(PKINAMES) $(MOCNAMES)) $(patsubst %, moc_%.o, $(MOCNAMES))
 DB_CPP=$(patsubst %,moc_%.cpp,$(MOCNAMES))
