--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -4,6 +4,7 @@ Name=X-CA
 Type=Application
 Comment=A graphical user interface for handling and issuing X.509 compliant Certificates
 Comment[de]=Eine graphische OberflÃ¤che zur Erstellung von X.509 konformen Zertifikaten
+Comment[fi]=Graafinen X.509-varmenteiden hallintatyökalu
 Exec=xca
 Icon=xca.xpm
 Terminal=false
