--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -18,7 +18,7 @@ CFLAGS=@ac_CC_WARN@ @ac_DEBUG@
 NAMES=func asn1int asn1time x509name x509rev x509v3ext pass_info \
 	pki_key pki_x509super pki_x509req pki_x509 \
 	pki_pkcs12 pki_temp pki_crl pki_pkcs7 \
-	db_base oid main.cpp
+	db_base oid main
 
 MOCNAMES=pki_base db_key db_x509super db_x509req db_x509 db_temp db_crl load_obj
 
