--- a/view/Makefile
+++ b/view/Makefile
@@ -3,9 +3,9 @@
 #
 #########################################################################
 
-NAMES=$(patsubst %.h, %, $(wildcard *.h))
-OBJS=$(patsubst %,moc_%.o,$(NAMES)) $(patsubst %,%.o,$(NAMES))
-DELFILES=$(patsubst %,moc_%.cpp,$(NAMES))
+NAMES=CertView CrlView KeyView ReqView TempView XcaListView
+OBJS=$(patsubst %, moc_%.o, $(NAMES)) $(patsubst %, %.o, $(NAMES))
+DELFILES=$(patsubst %, moc_%.cpp, $(NAMES))
 
 include ../Rules.mak
 
