--- a/widgets/Makefile
+++ b/widgets/Makefile
@@ -3,7 +3,8 @@
 #
 ############################################################################
 
-MOC_NAMES=$(patsubst %.h, %, $(wildcard *.h))
+MOC_NAMES=CertDetail ExportKey KeyDetail distname CrlDetail ExportTinyCA \
+	MainWindow ReqDetail validity ExportCert ImportMulti NewX509 clicklabel 
 NAMES=$(MOC_NAMES) NewX509_ext
 OBJS=$(patsubst %,moc_%.o,$(MOC_NAMES)) $(patsubst %,%.o,$(NAMES))
 DELFILES=$(patsubst %,moc_%.cpp,$(MOC_NAMES))
