--- a/debian/rules
+++ b/debian/rules
@@ -43,7 +43,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/xca.
-	$(MAKE) prefix=$(CURDIR)/debian/xca install
+	$(MAKE) destdir=$(CURDIR)/debian/xca prefix=/usr install
 
 # Build architecture-independent files here.
 binary-indep: build install
