About dialog and help window added Mainwindow.cpp splattered over several files database initialization happens only if needed

--- a/widgets/Makefile
+++ b/widgets/Makefile
@@ -4,8 +4,9 @@
 ############################################################################
 
 MOC_NAMES=CertDetail ExportKey KeyDetail distname CrlDetail ExportTinyCA \
-	MainWindow ReqDetail validity ExportCert ImportMulti NewX509 clicklabel 
-NAMES=$(MOC_NAMES) NewX509_ext
+	MainWindow ReqDetail validity ExportCert ImportMulti NewX509 clicklabel
+	
+NAMES=$(MOC_NAMES) NewX509_ext MW_menu MW_help MW_database
 OBJS=$(patsubst %,moc_%.o,$(MOC_NAMES)) $(patsubst %,%.o,$(NAMES))
 DELFILES=$(patsubst %,moc_%.cpp,$(MOC_NAMES))
 
