--- a/debian/rules
+++ b/debian/rules
@@ -12,8 +12,8 @@ configure: configure-stamp
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-	prefix=/usr ./configure
-
+	# prefix=/usr ./configure
+	cp debian/debian.mak Local.mak
 	touch configure-stamp
 
 build: build-stamp
@@ -71,7 +71,7 @@ binary-arch: build install
 	dh_strip
 	dh_compress
 	dh_fixperms
-#	dh_makeshlibs
+	dh_makeshlibs
 	dh_installdeb
 #	dh_perl
 	dh_shlibdeps
