--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,6 +3,10 @@
 #
 #########################################################################
 
+ifeq ($(TOPDIR),)
+TOPDIR=..
+endif
+
 MOCNAMES=db_crl db_key db_temp db_x509 db_x509req db_x509super pki_base
 NAMES=$(MOCNAMES) asn1int oid pki_pkcs7 x509rev asn1time pass_info \
 	pki_temp x509v3ext db_base pki_x509 func pki_crl pki_x509req \
@@ -11,5 +15,8 @@ NAMES=$(MOCNAMES) asn1int oid pki_pkcs7 x509rev asn1time pass_info \
 OBJS=$(patsubst %, %.o, $(NAMES)) $(patsubst %, moc_%.o, $(MOCNAMES))
 DELFILES=$(patsubst %,moc_%.cpp,$(MOCNAMES))
 
-include ../Rules.mak
-  
+include $(TOPDIR)/Rules.mak
+
+ifeq ($(DEP), yes)
+  sinclude .depend
+endif  
