--- a/view/Makefile
+++ b/view/Makefile
@@ -7,5 +7,8 @@ NAMES=CertView CrlView KeyView ReqView TempView XcaListView
 OBJS=$(patsubst %, moc_%.o, $(NAMES)) $(patsubst %, %.o, $(NAMES))
 DELFILES=$(patsubst %, moc_%.cpp, $(NAMES))
 
-include ../Rules.mak
+include $(TOPDIR)/Rules.mak
 
+ifeq ($(DEP), yes)
+  sinclude .depend
+endif  
