--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.5.2
 Package: xca
 Architecture: any
 Depends: ${shlibs:Depends}
-Description: A GUI for handling X509 certificates, RSA keys, PKCS#10 Requests and RSA keys.
+Description: A GUI for handling X509 certificates, RSA keys, PKCS#10 Requests and CRLs.
  The Program uses a Berkeley db for storage and supports RSA keys,
  Certificate signing requests (PKCS#10) and Certificates (X509v3)
  The signing of requests, and the creation of selfsigned certificates
