--- a/view/Makefile
+++ b/view/Makefile
@@ -3,6 +3,10 @@
 #
 #########################################################################
 
+ifeq ($(TOPDIR),)
+TOPDIR=..
+endif
+
 NAMES=CertView CrlView KeyView ReqView TempView XcaListView
 OBJS=$(patsubst %, moc_%.o, $(NAMES)) $(patsubst %, %.o, $(NAMES))
 DELFILES=$(patsubst %, moc_%.cpp, $(NAMES))
