--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: xca
 Section: x11
 Priority: optional
 Maintainer: Christian Hohnstaedt <christian@hohnstaedt.de>
-Build-Depends: debhelper (>> 3.0.0)
+Build-Depends: debhelper (>> 3.0.0), libdb3++-dev, libqt-dev, libssl-dev
 Standards-Version: 3.5.2
 
 Package: xca
