s/Revokation/Revocation/g s/Certifikate/Certificate/g

--- a/lib/base.h.in
+++ b/lib/base.h.in
@@ -13,6 +13,6 @@
 #include <WINDOWS.H>
 #endif  
 
-#define XCA_TITLE "X Certifikate and Key management"
+#define XCA_TITLE "X Certificate and Key management"
 
 #endif
