--- a/misc/Makefile
+++ b/misc/Makefile
@@ -2,7 +2,7 @@
 all: 
 
 install:
-	install -m 755 -d $(destdir)/etc/xca/ \
+	install -m 755 -d $(destdir)/share/xca/ \
 		$(destdir)$(prefix)/share/applications
 	install -m 644 *.txt $(destdir)$(prefix)/share/xca
 	install -m 644 xca.desktop $(destdir)$(prefix)/share/applications
