--- a/debian/rules
+++ b/debian/rules
@@ -8,19 +8,31 @@
 # This is the debhelper compatability version to use.
 export DH_COMPAT=2
 
+CFLAGS = -Wall -g
+
+ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+	CFLAGS += -O0
+else
+	CFLAGS += -O2
+endif
+ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
+	INSTALL_PROGRAM += -s
+endif
+
 Local.mak: 
 
 	dh_testdir
-	# Add here commands to configure the package.
-	# prefix=/usr ./configure
-	cat debian/debian.mak > Local.mak
+	prefix=/usr CFLAGS="$(CFLAGS)" QTDIR="/usr/share/qt3" ./configure
+#	Don't use scripts
+	-test -f debian/postinst && mv debian/postinst debian/postinst.bak
+	-test -f debian/postrm && mv debian/postrm debian/postrm.bak
 
 build: build-stamp
 build-stamp: Local.mak
 
 	dh_testdir
-	# Add here commands to compile the package.
-	$(MAKE) -j 4
+#	$(MAKE) -j 4
+	$(MAKE)
 	touch build-stamp
 
 clean:
@@ -28,8 +40,9 @@ clean:
 	dh_testroot
 	rm -f build-stamp
 
-	# Add here commands to clean up after the build process.
 	-$(MAKE) distclean
+	-test -f debian/postinst.bak && mv debian/postinst.bak debian/postinst
+	-test -f debian/postrm.bak && mv debian/postrm.bak debian/postrm
 	dh_clean
 
 install: build
@@ -38,8 +51,7 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
-	# Add here commands to install the package into debian/xca.
-	$(MAKE) install
+	$(MAKE) install destdir=$(CURDIR)/debian/tmp
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -49,6 +61,7 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
+	dh_install --list-missing 
 #	dh_installdebconf	
 	dh_installdocs
 #	dh_installexamples
@@ -59,7 +72,7 @@ binary-arch: build install
 #	dh_installmime
 #	dh_installinit
 #	dh_installcron
-	dh_installmanpages
+	dh_installman
 #	dh_installinfo
 #	dh_undocumented
 	dh_installchangelogs 
