add support for building on Mac OS X including app dir and dmg Fix extension bug for requests

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -24,5 +24,9 @@ install: xca.1.gz xca.html
 clean:
 	$(RM) xca.1.gz xca.1
 
+app: xca.html
+	mkdir -p $(APPDIR)/Resources
+	install -m 644 xca*.html $(APPDIR)/Resources
+
 include $(TOPDIR)/Local.mak
 
