--- a/widgets/Makefile
+++ b/widgets/Makefile
@@ -7,10 +7,14 @@ ifeq ($(TOPDIR),)
 TOPDIR=..
 endif
 
-MOC_NAMES=CertDetail ExportKey KeyDetail distname CrlDetail ExportTinyCA \
+#MOC_NAMES=CertDetail ExportKey KeyDetail distname CrlDetail ExportTinyCA \
 	MainWindow ReqDetail validity ExportCert ImportMulti NewX509 \
 	CertExtend clicklabel v3ext
-	
+
+MOC_NAMES=MainWindow KeyDetail clicklabel XcaTreeView ExportKey NewX509 \
+	validity v3ext ReqDetail distname CertDetail CertExtend
+
+#NAMES=$(MOC_NAMES) NewX509_ext MW_menu MW_help MW_database
 NAMES=$(MOC_NAMES) NewX509_ext MW_menu MW_help MW_database
 OBJS=$(patsubst %,moc_%.o,$(MOC_NAMES)) $(patsubst %,%.o,$(NAMES))
 DELFILES=$(patsubst %,moc_%.cpp,$(MOC_NAMES))
