--- a/lib/Makefile
+++ b/lib/Makefile
@@ -12,11 +12,11 @@ endif
 #	pki_temp x509v3ext db_base pki_x509 func pki_crl pki_x509req \
 #	load_obj pki_key pki_x509super main pki_pkcs12 x509name
 
-MOCNAMES= pki_base db_base db_key db_x509super db_x509req db_x509
+MOCNAMES= pki_base db_base db_key db_x509super db_x509req db_x509 db_temp
 NAMES=$(MOCNAMES) db asn1int oid asn1time pass_info \
 	func load_obj pki_key pki_x509super \
 	main x509name pki_x509req x509v3ext pki_x509 x509rev pki_pkcs12 \
-	pki_pkcs7
+	pki_pkcs7 pki_temp
 
 
 OBJS=$(patsubst %, %.o, $(NAMES)) $(patsubst %, moc_%.o, $(MOCNAMES))
