--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,7 +1,3 @@
-#
-# $Id$
-#
-#########################################################################
 
 ifeq ($(TOPDIR),)
 TOPDIR=..
@@ -12,12 +8,6 @@ NAMES=$(MOCNAMES) asn1int oid pki_pkcs7 x509rev asn1time pass_info \
 	pki_temp x509v3ext pki_x509 func pki_crl pki_x509req \
 	load_obj pki_key pki_x509super main pki_pkcs12 x509name db
 
-#MOCNAMES= pki_base db_base db_key db_x509super db_x509req db_x509 db_temp
-#NAMES=$(MOCNAMES) db asn1int oid asn1time pass_info \
-#	func load_obj pki_key pki_x509super \
-#	main x509name pki_x509req x509v3ext pki_x509 x509rev pki_pkcs12 \
-#	pki_pkcs7 pki_temp
-
 
 OBJS=$(patsubst %, %.o, $(NAMES)) $(patsubst %, moc_%.o, $(MOCNAMES))
 DELFILES=$(patsubst %,moc_%.cpp,$(MOCNAMES))
@@ -26,4 +16,7 @@ include $(TOPDIR)/Rules.mak
 
 ifeq ($(DEP), yes)
   sinclude .depend
-endif  
+endif
+
+db_dump: db_dump.cpp db.o db.h
+	gcc $(CPPFLAGS) $(CFLAGS) db_dump.cpp db.o -lQtCore -g -o $@
