use resource management for images modify configure for cygwin extend w332 installation

--- a/img/Makefile
+++ b/img/Makefile
@@ -1,16 +1,23 @@
 
-all:
-
-install:
-	install -m 755 -d $(destdir)$(prefix)/share/xca \
-		$(destdir)$(prefix)/share/pixmaps
-	install -m 644 key.xpm $(destdir)$(prefix)/share/pixmaps/xca.xpm
-	install -m 644 *.png $(destdir)$(prefix)/share/xca
-
-
-app:
-	mkdir -p $(APPDIR)/Resources
-	install -m 644 *.png $(APPDIR)/Resources
+ifeq ($(TOPDIR),)
+TOPDIR=..
+endif
 
 include $(TOPDIR)/Local.mak
 
+OBJS=imgres.o
+ifeq ($(HOST),w32)
+  OBJS += w32res.o
+endif
+
+DELFILES=imgres.cpp
+all: target.obj
+	echo $(OBJS)
+
+imgres.cpp: imgres.rcc
+	$(RCC) -o $@ $<
+
+w32res.o: w32res.rc
+	$(WINDRES) $< $@
+
+include $(TOPDIR)/Rules.mak
