--- a/widgets/Makefile
+++ b/widgets/Makefile
@@ -13,7 +13,7 @@ endif
 
 MOC_NAMES=MainWindow KeyDetail clicklabel XcaTreeView ExportKey NewX509 \
 	validity v3ext ReqDetail distname CertDetail CertExtend ExportCert \
-	ImportMulti CrlDetail
+	ImportMulti CrlDetail ExportDer
 
 #NAMES=$(MOC_NAMES) NewX509_ext MW_menu MW_help MW_database
 NAMES=$(MOC_NAMES) NewX509_ext MW_menu MW_help MW_database
