--- a/widgets/Makefile
+++ b/widgets/Makefile
@@ -16,7 +16,7 @@ MOC_NAMES=MainWindow KeyDetail clicklabel XcaTreeView ExportKey NewX509 \
 	ImportMulti CrlDetail ExportDer
 
 #NAMES=$(MOC_NAMES) NewX509_ext MW_menu MW_help MW_database
-NAMES=$(MOC_NAMES) NewX509_ext MW_menu MW_help MW_database
+NAMES=$(MOC_NAMES) NewX509_ext MW_help MW_database
 OBJS=$(patsubst %,moc_%.o,$(MOC_NAMES)) $(patsubst %,%.o,$(NAMES))
 DELFILES=$(patsubst %,moc_%.cpp,$(MOC_NAMES))
 
