--- a/img/Makefile
+++ b/img/Makefile
@@ -18,7 +18,7 @@ imgres.cpp: imgres.rcc
 	$(RCC) -o $@ $<
 
 imgres.rcc: bigcert.png bigcrl.png bigcsr.png bigkey.png bigtemp.png crl.png halfkey.png invalidcertkey.png invalidcert.png key.png netscape.png reqkey.png req.png revoked.png spki.png template.png validcertkey.png validcert.png
-w32res.o: w32res.rc
+w32res.o: w32res.rc key.ico xca.ico xdb.ico
 	$(WINDRES) $< $@
 
 include $(TOPDIR)/Rules.mak
