--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -6,6 +6,6 @@ Comment=A graphical user interface for handling and issuing X.509 compliant Cert
 Comment[de]=Eine graphische Oberfläche zur Erstellung von X.509 konformen Zertifikaten
 Comment[fi]=Graafinen X.509-varmenteiden hallintatyökalu
 Exec=xca
-Icon=xca.xpm
+Icon=key.xpm
 Terminal=false
 Categories=Application;Utility;QT;
