--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=X-CA
+Name=XCA
 Type=Application
 Comment=A graphical user interface for handling and issuing X.509 compliant Certificates
 Comment[de]=Eine graphische Oberfläche zur Erstellung von X.509 konformen Zertifikaten
