install the icon referenced in xca.desktop and use a less generic name
- xca.desktop referenced an icon file, but it wasn't installed

- the icon filename key.xpm was very generic, changed it to xca-32x32.xpm

--- a/img/Makefile
+++ b/img/Makefile
@@ -14,6 +14,9 @@ DELFILES=imgres.cpp
 all: target.obj
 	echo $(OBJS)
 
+install:
+	install -D -m 644 key.xpm $(destdir)$(prefix)/share/pixmaps/xca-32x32.xpm
+
 imgres.cpp: imgres.rcc
 	$(RCC) -o $@ $<
 
