fix typo in desktop file categories

--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -8,4 +8,4 @@ Comment[fi]=Graafinen X.509-varmenteiden hallintatyökalu
 Exec=xca
 Icon=key.xpm
 Terminal=false
-Categories=Application;Utility;QT;
+Categories=Application;Utility;Qt;
