--- a/doc/Makefile
+++ b/doc/Makefile
@@ -2,10 +2,12 @@ ifeq ($(TOPDIR),)
 TOPDIR=..
 endif
 
-DELFILES=*.html xca.1.gz 
-all: doc
-mandir=man
+DELFILES=xca*.html xca.1.gz
+
 doc: xca.1.gz xca.html
+include $(TOPDIR)/Rules.mak
+
+mandir=man
 
 xca.1.gz: xca.1
 	gzip -9 <$^ >$@
@@ -15,17 +17,13 @@ xca.html: xca.sgml
 	$(LINUXDOC) -B html $<
 
 install: xca.1.gz xca.html
-	install -m 755 -d $(destdir)$(prefix)/share/xca \
+	install -m 755 -d $(destdir)$(docdir) \
 		$(destdir)$(prefix)/$(mandir)/man1
-	install -m 644 xca*.html $(destdir)$(prefix)/share/xca
+	install -m 644 xca*.html $(destdir)$(docdir)
 	install xca.1.gz $(destdir)$(prefix)/$(mandir)/man1
-
-clean:
-	$(RM) xca.1.gz xca*.html
 
 app: xca.html
 	mkdir -p $(APPDIR)/Resources
 	install -m 644 xca*.html $(APPDIR)/Resources
 
-include $(TOPDIR)/Local.mak
 
