--- a/img/Makefile
+++ b/img/Makefile
@@ -15,7 +15,7 @@ all: target.obj
 	echo $(OBJS)
 
 install:
-	install -D -m 644 key.xpm $(destdir)$(prefix)/share/pixmaps/xca-32x32.xpm
+	install -D -m 644 xca-32x32.xpm $(destdir)$(prefix)/share/pixmaps/xca-32x32.xpm
 
 imgres.cpp: imgres.rcc
 	$(RCC) -o $@ $<
