add mime.xml file

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -3,9 +3,11 @@ all:
 
 install:
 	install -m 755 -d $(destdir)$(prefix)/share/xca/ \
-		$(destdir)$(prefix)/share/applications
+		$(destdir)$(prefix)/share/applications \
+		$(destdir)$(prefix)/share/mime/packages
 	install -m 644 *.txt *.xca $(destdir)$(prefix)/share/xca
 	install -m 644 xca.desktop $(destdir)$(prefix)/share/applications
+	install -m 644 xca.xml $(destdir)$(prefix)/share/mime/packages
 
 app:
 	mkdir -p $(APPDIR)/Resources
