--- a/misc/Makefile
+++ b/misc/Makefile
@@ -12,6 +12,6 @@ install:
 app:
 	mkdir -p $(APPDIR)/Resources
 	install -m 644 Info.plist PkgInfo $(APPDIR)
-	install -m 644 *.txt $(APPDIR)/Resources
+	install -m 644 *.txt *.xca $(APPDIR)/Resources
 
 include $(TOPDIR)/Local.mak
