--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -5,6 +5,7 @@ Type=Application
 Comment=A graphical user interface for handling and issuing X.509 compliant Certificates
 Comment[de]=Eine graphische Oberfläche zur Erstellung von X.509 konformen Zertifikaten
 Comment[fi]=Graafinen X.509-varmenteiden hallintatyökalu
+Comment[fr]=Création et gestion de certificats conformes à la norme X.509
 Exec=xca
 Icon=xca-32x32.xpm
 Terminal=false
