--- a/lang/Makefile
+++ b/lang/Makefile
@@ -29,7 +29,7 @@ po2ts: $(TS_XCA)
 xca_%.ts: %.po
 	po2ts -i $< | \
 	  sed 's,^\( *<translation type="unfinished"\)>$$,\1/>,' |\
-	  grep -v '^ *</translation>$$' > $@ || :
+	  grep -v '^ *</translation>$$' > $(@).NEW && mv $(@).NEW $(@) || :
 	#lconvert -i $< -of ts -o $@
 
 xca.pot: xca.ts
