--- a/macdeployqt/Makefile
+++ b/macdeployqt/Makefile
@@ -9,7 +9,7 @@ macdeployqt: Makefile.qt main.cpp shared.cpp shared.h
 	$(MAKE) -f Makefile.qt
 
 Makefile.qt: macdeployqt.pro
-	$(QMAKE) -o $@ $<
+	$(QMAKE) -spec macx-g++ -o $@ $<
 
 clean:
 	rm -f *.o Makefile.qt macdeployqt
