--- a/img/Makefile
+++ b/img/Makefile
@@ -11,11 +11,11 @@ ifeq ($(HOST),w32)
 endif
 
 DELFILES=imgres.cpp
-all: target.obj
-	echo $(OBJS)
 
-install:
-	install -D -m 644 xca-32x32.xpm $(destdir)$(prefix)/share/pixmaps/xca-32x32.xpm
+include $(TOPDIR)/Rules.mak
+
+install: xca-32x32.xpm
+	install -D -m 644 $^ $(destdir)$(prefix)/share/pixmaps/xca-32x32.xpm
 
 imgres.cpp: imgres.rcc
 	$(RCC) -o $@ $<
@@ -28,4 +28,3 @@ app:
 	mkdir -p $(APPDIR)/Resources
 	install -m 644 xca-mac-icon.icns $(APPDIR)/Resources
 
-include $(TOPDIR)/Rules.mak
