--- a/ui/Makefile
+++ b/ui/Makefile
@@ -3,10 +3,12 @@ ifeq ($(TOPDIR),)
 TOPDIR=..
 endif
 
-UINAMES=$(patsubst %.ui, ui_%, $(wildcard *.ui))
-UI_H=$(patsubst %, %.h, $(UINAMES))
-DELFILES=$(UI_H)
+UI_H = ui_About.h ui_CaProperties.h ui_CertDetail.h ui_CertExtend.h \
+	ui_CrlDetail.h ui_ExportDialog.h ui_ExportKey.h ui_Help.h \
+	ui_ImportMulti.h ui_KeyDetail.h ui_MainWindow.h ui_NewCrl.h \
+	ui_NewKey.h ui_NewX509.h ui_Options.h ui_PwDialog.h ui_Revoke.h \
+	ui_SelectToken.h ui_TrustState.h ui_v3ext.h
 
-include ../Rules.mak
+include $(TOPDIR)/Rules.mak
 
-headers: $(UI_H)
+ui: $(UI_H)
