--- a/img/Makefile
+++ b/img/Makefile
@@ -21,10 +21,11 @@ imgres.cpp: imgres.rcc
 	$(RCC) -o $@ $<
 
 imgres.rcc: bigcert.png bigcrl.png bigcsr.png bigkey.png bigtemp.png crl.png halfkey.png invalidcertkey.png invalidcert.png key.png netscape.png reqkey.png req.png revoked.png spki.png template.png validcertkey.png validcert.png scard.png
+
 w32res.o: w32res.rc key.ico xca.ico xdb.ico
 	$(WINDRES) $< $@
 
-app:
+app: xca-mac-icon.icns
 	mkdir -p $(APPDIR)/Resources
-	install -m 644 xca-mac-icon.icns $(APPDIR)/Resources
+	install -m 644 $^ $(APPDIR)/Resources
 
